@@ -22,6 +22,7 @@
         <jsoup.version>1.16.1</jsoup.version>
         <mybatis-plus.version>3.5.3.2</mybatis-plus.version>
         <druid.version>1.2.18</druid.version>
+        <expiringmap.version>0.5.10</expiringmap.version>
     </properties>
     <dependencies>
         <dependency>
@@ -103,6 +104,12 @@
             <artifactId>annotations</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.jodah/expiringmap -->
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>expiringmap</artifactId>
+            <version>${expiringmap.version}</version>
+        </dependency>
 
 
         <!--        <dependency>-->
@@ -140,6 +147,15 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
